--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
     <p id="password-strength"></p>
-    <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+    <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
     <button type="button" onclick="register()">Register</button>
   </form>
-  <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script src="script.js"></script>
 </body>
 </html>
